# researmy-research-hubch-hub

./: .gitignore  CHANGELOG.md  README.md  README.zh-TW.md  SKILL.md  UPGRADE.md  V087_PLAN.md  V088_PLAN.md  constraints.txt  pyproject.toml  pytest.ini  server.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
docs/: RELEASING.md  agentic-workflow-reference.md  ai-host-support.md  ai-integrations.md  ai-research-skills.md  authenticity.md  backfill_zotero.md  cli-reference.md  customization.md  example-claude-mcp-flow.md  ezproxy.md  file-formats.md  first-10-minutes.md  interop-test-v068-2.md  literature-review-deliverable.md  live-smoke.md  mcp-tools.md  notebooklm.md  personas.md  research-workspace-manifest.md  setup.md  stable-api.md  task-workflows.md
docs/demo/: build_demo_gif.py
docs/zh/: README.md  ai-integrations.md  cli-reference.md  quickstart.md
scripts/: backfill_zotero.py  weekly_bse_pull.bat
skills/gap-to-topic/scripts/: dossier_to_docx.js
skills/notebooklm-brief-verifier/references/: report-template.md
skills/paper-summarize/: SKILL.md
skills/research-design-helper/: SKILL.md
skills/research-hub/: SKILL.md
skills/research-hub-multi-ai/references/: multi_ai_plan_template.md
skills/research-project-orienter/: SKILL.md
skills/zotero-library-curator/: SKILL.md
skills/zotero-library-curator/references/: audit-checks.md  report-template.md
src/research_hub/: __init__.py  _deprecation.py  _invocation.py  _useragent.py  authenticity.py  auto.py  cli.py  cli_citations.py  cli_clusters.py  cli_common.py  cli_maintenance.py  cli_notebooklm.py  cli_paper.py  cli_pipeline.py  cli_search.py  cli_summarize.py  cli_vault.py  cli_zotero.py  cluster_overview.py  cluster_rebind.py  clusters.py  config.py  dedup.py  defuddle_extract.py  describe.py  discover.py  doctor.py  errors.py  ezproxy.py  fit_check.py  fsops.py  gap_analysis.py  importer.py  ingest_diff.py  init_wizard.py  llm_cli.py  manifest.py  mcp_server.py  obsidian_bases.py  operations.py  (+11 more)
src/research_hub/api/: v1.py
src/research_hub/assets/themes/: research-hub-tech.css
src/research_hub/dashboard/: context.py  data.py  executor.py  http_server.py  palette.py  script.js  sections.py  style.css  template.html  types.py
src/research_hub/notebooklm/: __init__.py  auth.py  bundle.py  client.py  download.py  keepalive.py  pdf_fetcher.py  upload.py  url_quality.py
src/research_hub/search/: __init__.py  abstract_recovery.py  arxiv_backend.py  biorxiv.py  chemrxiv.py  cinii.py  crossref.py  dblp.py  enrich.py  eric.py  fallback.py  google_scholar_backend.py  kci.py  nasa_ads.py  openalex.py  pubmed.py  query_expansion.py  repec.py  semantic_scholar.py  ssrn_backend.py  websearch.py
src/research_hub/security/: __init__.py  secret_box.py
src/research_hub/skills_data/gap-to-topic/: SKILL.md
src/research_hub/skills_data/gap-to-topic/references/: dossier-template.md
src/research_hub/skills_data/gap-to-topic/scripts/: README.md
src/research_hub/skills_data/literature-triage-matrix/: SKILL.md
src/research_hub/skills_data/notebooklm-brief-verifier/: SKILL.md
src/research_hub/skills_data/paper-memory-builder/: SKILL.md
src/research_hub/skills_data/paper-memory-builder/references/: revision_history_schema.md  yaml-schemas.md
src/research_hub/skills_data/paper-summarize/: SKILL.md
src/research_hub/skills_data/research-context-compressor/: SKILL.md
src/research_hub/skills_data/research-context-compressor/references/: example-humanities-project.md
src/research_hub/skills_data/research-design-helper/: SKILL.md
src/research_hub/skills_data/research-design-helper/references/: design_brief_template.md  socratic-segments.md
src/research_hub/skills_data/research-hub/: SKILL.md
src/research_hub/skills_data/research-hub-multi-ai/: SKILL.md
src/research_hub/skills_data/research-hub-multi-ai/evals/: evals.json
src/research_hub/vault/: frontmatter_dedupe.py  gc.py  graph_config.py  hub_backlink_migrate.py  hub_overview.py  install_theme.py  link_updater.py  sync.py  tag_migrate.py
src/research_hub/zotero/: client.py  doi_overrides.py  enrich.py  fetch.py  gc.py  pdf_attach.py
tests/: _pipeline_fixtures.py  conftest.py  test_arch2_cli_split.py  test_authenticity.py  test_cli_notebooklm.py  test_consistency.py  test_dashboard_executor_e2e.py  test_dashboard_sections_v2.py  test_dashboard_v2.py  test_doctor.py  test_doctor_invariants.py  test_dogfooding_fixes.py  test_e2e_smoke.py  test_ezproxy.py  test_field_preset.py  test_first_run_ux.py  test_fit_check.py  test_fit_check_relevance.py  test_graph_config_v027.py  test_handoff_gap_to_topic_design_helper.py  test_hub_overview.py  test_init_wizard.py  test_link_updater.py  test_moc.py  test_notebooklm_brief_mirror.py  test_notebooklm_v086.py  test_operations.py  test_pdf_fetcher.py  test_persona_modes.py  test_pipeline.py  test_pipeline_e2e.py  test_quarantine_mcp.py  test_search_adversarial.py  test_skill_structure.py  test_skills_data_parity.py  test_suggest.py  test_useragent_version_sync.py  test_v030_large_vault.py  test_v030_security.py  test_v038_init_persona.py  (+109 more)
tests/fixtures/: topic_dossier_multi_eligible_sample.gaps.yml
tests/stress/: test_pipeline_ingest.py
