[project]
name = "research-hub-pipeline"
version = "1.1.1"
description = "AI-operable research workspace for Zotero, Obsidian, and NotebookLM. Use any two, or all three, through CLI, MCP, REST, and dashboard."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
# v0.95.0 W9 (G5 #18): upper bounds on every runtime dep. Pre-fix
# all deps were unbounded; v0.88.10 shipped "100% NLM upload broken"
# from a notebooklm-py minor-version kwarg drift with zero guard.
# Caps are next-major for stable libs, tight for 0.x (any minor can
# break). Reproducible installs: pip install -e . -c constraints.txt.
dependencies = [
    "networkx>=3.0,<4.0",
    "notebooklm-py>=0.4.1,<0.5.0",
    "httpx>=0.27,<1.0",
    "platformdirs>=4.0,<6.0",
    "pyzotero>=1.5.18,<2.0",
    "pyyaml>=6,<7",
    "rapidfuzz>=3.0,<4.0",
    "requests>=2.28,<3.0",
]

[project.urls]
Homepage = "https://github.com/WenyuChiou/research-hub"
Repository = "https://github.com/WenyuChiou/research-hub"
Issues = "https://github.com/WenyuChiou/research-hub/issues"

[project.optional-dependencies]
secrets = ["cryptography>=42"]
import = [
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "readability-lxml>=0.8",
    "requests>=2.28",
]
mcp = ["fastmcp>=2.0"]
browser-auth = ["rookiepy>=0.1.0", "browser-cookie3>=0.19.1"]
playwright = ["patchright>=1.55"]
scholar = ["scholarly>=1.7"]  # enables google-scholar search backend
dev = [
    "pytest>=7",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-socket>=0.7",
    "pytest-split>=0.8",
    "pytest-timeout>=2.3",
    "responses>=0.23",
]

[project.scripts]
research-hub = "research_hub.cli:main"
research-hub-mcp = "research_hub.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_hub"]
# Hatch's default package discovery includes all files under packages/,
# so src/research_hub/skills_data/**/SKILL.md and samples/** ship automatically.

# pytest config lives in pytest.ini, which pytest prefers over a pyproject
# [tool.pytest.ini_options] block — so the duplicate block here was IGNORED and
# silently drifting. Removed in v1.1 (P2-5b); edit pytest.ini for pytest config.
